Add enpoint POST /user/payment/process/wallet/:id - order pay using user wallet
